# avlib-python

./: .clang-format  .gitignore  main.ipynb  main.py
avlib/: CMakeLists.txt
avlib/src/: avlib.cc  codec_config.cc  codec_config.hh  common.hh  converter.cc  converter.hh  decoder.cc  decoder.hh  demuxer.cc  demuxer.hh  encoder.cc  encoder.hh  frame.cc  frame.hh  generator.cc  generator.hh  packet.cc  packet.hh
